# json2schema

./: Makefile  NEW  README.md  TODO  benchmark.py  main.py  pyproject.toml  requirements.dev.txt
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/actions/build-docs/: action.yml
.github/workflows/: reusable-test.yml
docs/source/: conf.py  index.rst
docs/source/basic/: cli.rst  index.rst  python.rst
json2schema/comparators/: __init__.py  no_additional_prop.py  template.py  type.py
json2schema/core/: pipeline.py
json2schema/core/comparators/: __init__.py  array.py  empty.py  flag.py  property.py  required.py  template.py  type.py
json2schema2schema/: cli.py
tests/: compare_schema_digests.py  schema_fingerprint.py  test_check_datasets.py
tests/comparators/: test_required.py  test_type.py
tests/datasets/: fixprice_catalog.json
